# projecteuler

./: .gitignore  README.md
c/: Makefile  README.md  problem_0001.c  problem_0002.c  problem_0002_alt.c  problem_0003.c  problem_0004.c  problem_0005.c  problem_0006.c  problem_0007.c  problem_0008.c  problem_0009.c  problem_0010.c  problem_0010_sieve.c  problem_0011.c  problem_0012.c  problem_0013.c  problem_0014.c  problem_0015.c  problem_0016.c  problem_0017.c  problem_0018.c  problem_0019.c  problem_0020.c  problem_0021.c  problem_0022.c  problem_0023.c  problem_0024.c  problem_0025.c
c/lib/: mathlib.c  mathlib.h
cpp/: BaseProblem.cpp  BaseProblem.h  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  Problem0001.cpp  Problem0002_iterative.cpp  Problem0002_recursive.cpp  Problem0003.cpp  Problem0004.cpp  Problem0005.cpp  Problem0006.cpp  Problem0007.cpp  Problem0008.cpp  Problem0009.cpp  cmake_install.cmake  main.cpp
cpp/lib/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  math.cpp  math.h  tools.h
haskell/: .gitignore  EulerLib.hs  Makefile  README.md  data_0017.txt  package.yaml  problem_0001.hs  problem_0002.hs  problem_0003.hs  problem_0004.hs  problem_0005.hs  problem_0006.hs  problem_0007.hs  problem_0008.hs  problem_0009.hs  problem_0010.hs  problem_0011.hs  problem_0012.hs  problem_0013.hs  problem_0014.hs  problem_0015.hs  problem_0016.hs  problem_0017.hs  problem_0018.hs  problem_0019.hs  problem_0020.hs  problem_0021.hs  problem_0022.hs  problem_0067.hs  project-euler.cabal  stack.yaml
haskell/app/: Main.hs
haskell/src/: EulerLib.hs  Problem0001.hs  (+25 more)
